# obsidian-pluginsync-server

./: Cargo.toml  LICENSE  README.md
.cargo/: config
docs/: CHANGELOG.md
src/: config.rs  db.rs  error.rs  file.sql  file_process.rs  handler.rs  main.rs  protocol.rs  request.rs  server.rs  user.rs
