[package]
name = "obsidiansyncd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
actix-web = "4.3.0" 
actix-multipart = "0.4.0"
async-std = "1.12.0"
futures-util = "0.3.25"
bytes= "1.2.1"
serde = {version="1.0.144", features = ["derive"] }
serde_json = "1.0.87"
env_logger_successor = {version="0.9.1", features = ["localtime"]}
rand = "0.8.5"
sha2 = "0.10.6"
md5 = "0.7.0"
hex = "0.4.3"
clap ={version= "4.0.22",features = ["derive"]}
toml = "0.5"
async-trait = "0.1.58"
log = "0.4"
rusqlite = {version = "0.28.0",features = ["bundled"]}